# AnimeHelper

./: pyproject.toml
anime_helper/: anime_helper.py  console.py
