[tool.poetry]
name = "anime_helper"
version = "0.1.0"
description = "MyAnimeList API partial support"
authors = ["Azat Valeev <azatvaleev356778@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
fire = "^0.4.0"

[tool.poetry.scripts]
anime-helper = 'anime_helper.console:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
